Bug 482017 - kwallet-query crashes after upgrade to kf6-kwallet
Summary: kwallet-query crashes after upgrade to kf6-kwallet
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwallet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords: qt6
: 482578 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-02-29 12:44 UTC by Alex Ball
Modified: 2024-03-28 09:16 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Ball 2024-02-29 12:44:38 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

After upgrading to MegaRelease 6, `kwallet-query` fails with an error when invoked in a script or on the command line. The arguments given do not seem to matter.

STEPS TO REPRODUCE
1. `kwallet-query --help`
2. 
3. 

OBSERVED RESULT

```
ASSERT failure in KCatalogPrivate::setupGettextEnv: "You need to instantiate a Q*Application before using KCatalog", file ./src/i18n/kcatalog.cpp, line 306
[1]    5403 IOT instruction (core dumped)  kwallet-query --help
```

EXPECTED RESULT

`Usage: kwallet-query [options] wallet`
and so on.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon 6.0 User edition
KDE Plasma Version: 6.0.0
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
Comment 1 pipapo 2024-02-29 16:58:13 UTC
Exact the same here.
Comment 2 Bug Janitor Service 2024-03-01 18:00:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwallet/-/merge_requests/80
Comment 3 Christoph Cullmann 2024-03-03 13:15:35 UTC
Git commit be09140e627cb804e4e0c4345eac9ef53d44edd9 by Christoph Cullmann, on behalf of Nicolas Fella.
Committed on 03/03/2024 at 13:13.
Pushed by cullmann into branch 'master'.

[kwallet-query] Create QApplication before using i18n

M  +2    -1    src/runtime/kwallet-query/src/main.cpp

https://invent.kde.org/frameworks/kwallet/-/commit/be09140e627cb804e4e0c4345eac9ef53d44edd9
Comment 4 Nicolas Fella 2024-03-06 20:32:09 UTC
*** Bug 482578 has been marked as a duplicate of this bug. ***
Comment 5 Dino 2024-03-28 08:34:35 UTC
Any chance this fix can be released sooner? It affects various desktop automation I have.
Comment 6 pipapo 2024-03-28 09:16:40 UTC
(In reply to Dino from comment #5)
> Any chance this fix can be released sooner? It affects various desktop
> automation I have.

Same with me. That would also make me very happy. Thanks a lot for all your efforts!