[kwallet-query] Create QApplication before using i18n

BUG: 482017